<resources>
    <string name="app_name">Child Care</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rpassword">Confirm Password</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="dob">Date of Birth</string>
    <string name="nok">Next of kin</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_username">Enter Valid Username</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="admin_login">Login as Admin</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_valid_username_password">Wrong Username or Password</string>
    <string name="action_settings">Settings</string>
    <string name="no_account">Not registered? Sign up</string>
    <string name="have_account">Have an account? Login</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="add">Add</string>
    <string name="schedule">Schedule</string>
    <string name="save">Save</string>
    <string name="empty">This field should not be empty</string>
    <string name="title_activity_child">ChildActivity</string>
    <string name="tab_text_1">Details</string>
    <string name="tab_text_2">Activities</string>
    <string name="tab_text_3">Photos</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="delete">Delete</string>
    <string name="eidt">Edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
